@@ -8,8 +8,9 @@
 	bugfix: fixed IPv4 address browsing for MySQL-4 DB
 	update: better attributes edit form by Aaron Dummer
 	update: numerous UI adjustments across all pages
-	new feature: cisco 2900 series support for gateways/switchvlans
+	new feature: more cisco models support in gateways/switchvlans
 	new feature: initial implementation of SNMP port data importer
+	new feature: reset UI configuration to defaults
 0.14.6 2007-10-15
 	new feature: browser-side validation for a new IPv4 network
 	  (contributed by Aaron Dummer)
